adding links to the various pages

--- a/home.html
+++ b/home.html
@@ -101,8 +101,8 @@
     <button>Review</button>
   </div>
   <div class="auth-links">
-    <a href="#">Sign up</a>
-    <a href="#">Log in</a>
+    <a href="signup.html">Sign up</a>
+    <a href="login.html">Log in</a>
   </div>
 </div>
 
