--- a/signup.html
+++ b/signup.html
@@ -68,7 +68,7 @@
     <button type="submit" class="signup-btn">Sign up</button>
   </form>
   <div class="links">
-    Already have an account? <a href="#">Log in</a>
+    Already have an account? <a href="login.html">Log in</a>
   </div>
 </div>
 </body>
