--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
     <a href="#">Forgot password?</a>
   </div>
   <div class="links">
-    Don't have an account yet? <a href="#">Sign up</a>
+    Don't have an account yet? <a href="signup.html">Sign up</a>
   </div>
 </div>
 </body>
