--- a/home.html
+++ b/home.html
@@ -100,10 +100,18 @@
     <button>Discover</button>
     <button>Review</button>
   </div>
+   
   <div class="auth-links">
     <a href="signup.html">Sign up</a>
     <a href="login.html">Log in</a>
   </div>
+</div>
+<div class="categories">
+  <button>Restaurants</button>
+  <button>Hotels</button>
+  <button>Things to do</button>
+  <button>BnBs</button>
+  <button>Gardens</button>
 </div>
 
 <!-- Search bar -->
