--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
     <button type="submit" class="login-btn">Log in</button>
   </form>
   <div class="links">
-    <a href="#">Forgot password?</a>
+    <a href="forgot_password.html">Forgot password?</a>
   </div>
   <div class="links">
     Don't have an account yet? <a href="signup.html">Sign up</a>
