editing the sign up container

--- a/signup.html
+++ b/signup.html
@@ -61,11 +61,11 @@
   <div class="logo">LOGO</div>
   <h2>Don't have an account yet?</h2>
   <form>
-    <input type="text" placeholder="Email address" required />
-    <input type="text" placeholder="Username" required />
-    <input type="text" placeholder="Full name" required />
-    <input type="password" placeholder="Password" required />
-    <button type="submit" class="signup-btn">Sign up</button>
+    <input type="text" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="text" placeholder="Username" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="text" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="password" placeholder="Password" style="width: 370px; height: 20px; font-size: 14px;" required />
+    <button type="submit" class="signup-btn" style="width: 380px; height: 40px; font-size: 14px;" >Sign up</button>
   </form>
   <div class="links">
     Already have an account? <a href="login.html">Log in</a>
