changing the position of the categories

--- a/home.html
+++ b/home.html
@@ -45,13 +45,18 @@
     margin: 20px;
   }
   .search-box {
-    width: 300px;
+    width: 600px;
     height: 40px;
     padding: 8px;
     border: 1px solid #888;
     border-radius: 4px;
   }
 
+    .categories {
+    display: flex;
+    justify-content: center;
+    margin: 20px;    
+}
 
   .main {
     display: flex;
@@ -107,6 +112,12 @@
     <a href="login.html">Log in</a>
   </div>
 </div>
+
+
+<div class="search-container">
+  <input type="text" placeholder="Search" class="search-box" />
+</div>
+
 <div class="categories">
   <button>Restaurants</button>
   <button>Hotels</button>
@@ -114,12 +125,6 @@
   <button>BnBs</button>
   <button>Gardens</button>
 </div>
-
-
-<div class="search-container">
-  <input type="text" placeholder="Search" class="search-box" />
-</div>
-
 
 <div class="main">
 
