--- a/home.html
+++ b/home.html
@@ -51,12 +51,23 @@
     border: 1px solid #888;
     border-radius: 4px;
   }
-
-    .categories {
-    display: flex;
-    justify-content: center;
-    margin: 20px;    
+  
+  .categories{
+display: flex;
+justify-content: center;
+gap: 10px;
 }
+
+.categories button {
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #000;
+  border-radius: 4px;
+  cursor: pointer;
+  justify-content: center;
+}
+
 
   .main {
     display: flex;
