changing dimensions of properties of the forgot form

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -63,8 +63,8 @@
   <h2>Forgot password?</h2>
   <form>
     Enter your email or username to reset your password.
-    <input type="text" placeholder="Email/Username" required />
-    <button type="submit" class="login-btn">Submit</button>
+    <input type="text" placeholder="Email/Username" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <button type="submit" class="login-btn"style="width: 380px; height: 40px; font-size: 14px;">Submit</button>
   </form>
 </div>
 </body>
