Updating the header to have a new logo

--- a/home.html
+++ b/home.html
@@ -112,11 +112,11 @@ gap: 10px;
 
 
 <div class ="toplink">
-    
+
 </div>
 
 <div class="header">
-  <div class="logo">LOGO</div>
+  <div class="logo">VENUE~WISE</div>
   <div class="nav-buttons">
     <button>Near you</button>
     <button>Discover</button>
