--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="logo">LOGO</div>
+  <div class="logo">VENUE~WISE</div>
   <h2>Don't have an account yet?</h2>
   <form>
     <input type="text" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
