Editing the buttons on the home page to allow for one to use them to navigate to another page

--- a/home.html
+++ b/home.html
@@ -118,11 +118,12 @@ gap: 10px;
 <div class="header">
   <div class="logo">VENUE~WISE</div>
   <div class="nav-buttons">
-    <button>Near you</button>
-    <button>Discover</button>
-    <button>Review</button>
+    <button onclick="location.href='near_you.html'">Near you</button>
+    <button onclick="location.href='discover.html'">Discover</button>
+    <button onclick="location.href='review.html'">Review</button>
   </div>
-   
+
+
   <div class="auth-links">
     <a href="signup.html">Sign up</a>
     <a href="login.html">Log in</a>
@@ -135,11 +136,11 @@ gap: 10px;
 </div>
 
 <div class="categories">
-  <button>Restaurants</button>
-  <button>Hotels</button>
-  <button>Things to do</button>
-  <button>BnBs</button>
-  <button>Gardens</button>
+  <button onclick="location.href='restaurants.html'">Restaurants</button>
+  <button onclick="location.href='hotels.html'">Hotels</button>
+  <button onclick="location.href='things_to_do.html'">Things to do</button>
+  <button onclick="location.href='bnbs.html'">BnBs</button>
+  <button onclick="location.href='gardens.html'">Gardens</button>
 </div>
 
 <div class="main">
