--- a/login.html
+++ b/login.html
@@ -59,7 +59,8 @@
 </head>
 <body>
 <div class="container">
-  <div class="logo">VENUE~WISE</div>
+  <div class="logo">VENUE~WISE
+  </div>
   <h2>Already have an account?</h2>
   <form>
     <input type="text" placeholder="Email/Username" style="width: 350px; height: 20px; font-size: 14px;" required />
