adding the 'select role' functionality to the sign up page and removing the username option

--- a/signup.html
+++ b/signup.html
@@ -62,9 +62,14 @@
   <h2>Don't have an account yet?</h2>
   <form>
     <input type="text" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
-    <input type="text" placeholder="Username" style="width: 350px; height: 20px; font-size: 14px;" required />
     <input type="text" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
     <input type="password" placeholder="Password" style="width: 370px; height: 20px; font-size: 14px;" required />
+    <br><br>
+    <select name="" id="">
+            <option value="">--Select Role--</option>
+            <option value="">Client</option> 
+            <option value="">Venue Owner/Manager</option>
+        </select>
     <button type="submit" class="signup-btn" style="width: 380px; height: 40px; font-size: 14px;" >Sign up</button>
   </form>
   <div class="links">
