fixing venue~wise logo in sign up and login pages

--- a/login.html
+++ b/login.html
@@ -18,7 +18,13 @@
     box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
   }
   .logo {
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
+}
+  .logo a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+    font-weight: bold;
   }
   h2 {
     text-align: center;
@@ -59,7 +65,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="logo">VENUE~WISE
+  <div class="logo"><a href="home.html">VENUE~WISE</a>
   </div>
   <h2>Already have an account?</h2>
   <form>
