--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,12 @@
   .logo {
     margin-bottom: 20px;
   }
+    .logo a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+    font-weight: bold;
+  }
   h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -58,7 +64,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="logo">VENUE~WISE</div>
+  <div class="logo"> <a href="home.html">VENUE~WISE</a> </div>
   <h2>Don't have an account yet?</h2>
   <form>
     <input type="text" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
