--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
     margin: 0;
     padding: 0;
   }
- 
+
+  
   .header {
     display: flex;
     justify-content: space-between;
@@ -21,6 +22,12 @@
   .logo {
     font-weight: bold;
   }
+  .logo a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+  }
+
   .nav-buttons {
     display: flex;
     gap: 10px;
@@ -38,7 +45,15 @@
     gap: 10px;
     margin-left: 20px;
   }
+  .auth-links a {
+    text-decoration: none;
+    color: #333;
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
 
+  
   .search-container {
     display: flex;
     justify-content: center;
@@ -51,30 +66,30 @@
     border: 1px solid #888;
     border-radius: 4px;
   }
+
   
-  .categories{
-display: flex;
-justify-content: center;
-gap: 10px;
-}
+  .categories {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  .categories button {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #000;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 
-.categories button {
-  padding: 8px 12px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  color: #000;
-  border-radius: 4px;
-  cursor: pointer;
-  justify-content: center;
-}
-
-
+  
   .main {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
+  
   .banner {
     margin: 20px auto;
     width: 600px;
@@ -82,6 +97,7 @@ gap: 10px;
     border: 1px solid #888;
     position: relative;
   }
+
   
   .section {
     width: 90%;
@@ -92,38 +108,73 @@ gap: 10px;
     margin-bottom: 10px;
     text-align: left;
   }
- 
+
+  
+  .carousel-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 650px; 
+    margin: auto;
+  }
+
+  
+  .arrow-left,
+  .arrow-right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255,255,255,0.8);
+    border: none;
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .arrow-left {
+    left: 10px;
+  }
+  .arrow-right {
+    right: 10px;
+  }
+
+  
   .venue-list {
     display: flex;
     overflow-x: auto;
-    overflow-y: auto;
-    padding: 10px 0;
     gap: 10px;
+    padding: 10px 0;
+    width: 100%;
+    scrollbar-width: none; /* Firefox */
   }
-  .venue-item {
-    min-width: 150px;
-    height: 100px;
-    border: 1px solid #888;
-    flex-shrink: 0;
+  
+  .venue-list::-webkit-scrollbar {
+    display: none;
+  }
+
+  
+  .venue-image {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    display: block;
   }
 </style>
 </head>
 <body>
 
 
-<div class ="toplink">
-
-</div>
-
 <div class="header">
-  <div class="logo">VENUE~WISE</div>
+  <div class="logo"><a href="home.html">VENUE~WISE</a></div>
   <div class="nav-buttons">
     <button onclick="location.href='near_you.html'">Near you</button>
     <button onclick="location.href='discover.html'">Discover</button>
     <button onclick="location.href='review.html'">Review</button>
   </div>
-
-
   <div class="auth-links">
     <a href="signup.html">Sign up</a>
     <a href="login.html">Log in</a>
@@ -135,6 +186,7 @@ gap: 10px;
   <input type="text" placeholder="Search" class="search-box" />
 </div>
 
+
 <div class="categories">
   <button onclick="location.href='restaurants.html'">Restaurants</button>
   <button onclick="location.href='hotels.html'">Hotels</button>
@@ -143,20 +195,28 @@ gap: 10px;
   <button onclick="location.href='gardens.html'">Gardens</button>
 </div>
 
+
 <div class="main">
 
+  
+  <div class="banner"></div>
 
-  <div class="banner">
-
-  </div>
-
-
+ 
   <div class="section">
     <h3>Find out what's popular</h3>
-    <div class="venue-list">
-      <div class="venue-item"></div>
-      <div class="venue-item"></div>
-      <div class="venue-item"></div>
+    <div class="carousel-container">
+      <button class="arrow-left" onclick="scrollCarousel(-1)">&#8592;</button>
+      <div class="venue-list" id="popularCarousel">
+        
+        <img src="images/carnivore restaurant.jpg" class="venue-image" alt="">
+        <img src="images/NSK.jpg" class="venue-image" alt="">
+        <img src="images/harvest.jpg" class="venue-image" alt="">
+        <img src="images/Tribe.jpg" class="venue-image" alt="">
+        <img src="images/kempinski.jpg" class="venue-image" alt="">
+        <img src="images/kwetu.jpg" class="venue-image" alt="">
+        <img src="images/radisson blu.jpg" class="venue-image" alt="">
+      </div>
+      <button class="arrow-right" onclick="scrollCarousel(1)">&#8594;</button>
     </div>
   </div>
 
@@ -171,6 +231,8 @@ gap: 10px;
   </div>
 
 </div>
+
+<script src="scripts.js"></script>
 
 </body>
 </html>
