--- a/forgot_password.html
+++ b/forgot_password.html
@@ -20,6 +20,12 @@
   .logo {
     margin-bottom: 20px;
   }
+  .logo a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+    font-weight: bold;
+  } 
   h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -59,11 +65,12 @@
 </head>
 <body>
 <div class="container">
-  <div class="logo">LOGO</div>
+  <div class="logo"> <a href="home.html">VENUE~WISE</a> </div>
   <h2>Forgot password?</h2>
   <form>
     Enter your email or username to reset your password.
-    <input type="text" placeholder="Email/Username" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <br><br>
+    <input type="email" id="email" placeholder="Email address" style="width: 370px; height: 25px; font-size: 14px;" required />
     <button type="submit" class="login-btn"style="width: 380px; height: 40px; font-size: 14px;">Submit</button>
   </form>
 </div>
