--- a/home.html
+++ b/home.html
@@ -199,7 +199,9 @@
 <div class="main">
 
   
-  <div class="banner"></div>
+  <div class="banner">
+    <img src="images/Venue~wise banner gif.gif" alt="Banner Image" style="width: 100%; height: 100%; object-fit: cover;" />
+  </div>
 
  
   <div class="section">
