--- a/signup.html
+++ b/signup.html
@@ -65,6 +65,30 @@
       text-align: center;
       margin-top: 10px;
   }
+  .password-wrapper {
+  position: relative;
+  width: 95%;
+}
+
+.password-wrapper input {
+  width: 100%;
+  padding: 8px 30px 8px 12px; /* right padding for icon space */
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.toggle-password {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 16px;
+  color: #888;
+  user-select: none;
+}
+
 </style>
 </head>
 <body>
@@ -73,7 +97,11 @@
   <h2>Don't have an account yet?</h2>
   <form id="signupForm">
     <input type="email" id="email" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
-    <input type="password" id="password" placeholder="Password" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="email" id="username" placeholder="username" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <div class="password-wrapper">
+  <input type="password" id="password" placeholder="Password" style="width: 332px; height: 20px; font-size: 14px;" required />
+  <span class="toggle-password" onclick="togglePassword()">👁️</span>
+</div>
     <select id="role" style="width: 375px; height: 35px; font-size: 14px;" required >
       <option value="">--Select Role--</option>
       <option value="client">Client</option> 
@@ -87,6 +115,18 @@
   </div>
 </div>
   <script>
+    function togglePassword() {
+  const passwordInput = document.getElementById("password");
+  const toggleIcon = document.querySelector(".toggle-password");
+
+  if (passwordInput.type === "password") {
+    passwordInput.type = "text";
+    toggleIcon.textContent = "🔒"; // Now it's visible
+  } else {
+    passwordInput.type = "password";
+    toggleIcon.textContent = "👁️"; // Now it's hidden
+  }
+}
   window.onload = function () {
     document.getElementById('signupForm').addEventListener('submit', async (e) => {
       e.preventDefault();
