--- a/login.html
+++ b/login.html
@@ -95,7 +95,8 @@
     <input type="text" id="email" placeholder="Email/Username" style="width: 350px; height: 20px; font-size: 14px;" required />
     <div class="password-wrapper">
   <input type="password" id="password" placeholder="Password" style="width: 332px; height: 20px; font-size: 14px;" required />
-  <span class="toggle-password" onclick="togglePassword()">👁️</span>
+  <span class="toggle-password" onclick="togglePassword()" title="Show Password">👁️</span>
+
 </div>
     <button type="submit" class="login-btn" style="width: 380px; height: 40px; font-size: 14px;" >Log in</button>
   </form>
@@ -109,17 +110,19 @@
 </div>
 <script>
   function togglePassword() {
-  const passwordInput = document.getElementById("password");
-  const toggleIcon = document.querySelector(".toggle-password");
+    const passwordInput = document.getElementById("password");
+    const toggleIcon = document.querySelector(".toggle-password");
 
-  if (passwordInput.type === "password") {
-    passwordInput.type = "text";
-    toggleIcon.textContent = "🔒"; // Hide icon
-  } else {
-    passwordInput.type = "password";
-    toggleIcon.textContent = "👁️"; // Show icon
+    if (passwordInput.type === "password") {
+      passwordInput.type = "text";
+      toggleIcon.textContent = "🙈";
+      toggleIcon.title = "Hide Password";
+    } else {
+      passwordInput.type = "password";
+      toggleIcon.textContent = "👁️";
+      toggleIcon.title = "Show Password";
+    }
   }
-}
     document.getElementById('loginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
 
