adding the header to the three tabs at the top of the site

--- a/hotels.html
+++ b/hotels.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Home Page</title>
+<title>Hotels</title>
+<link rel="stylesheet" href="css/structure.css">
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -66,5 +67,14 @@
     <a href="login.html">Log in</a>
   </div>
 </div>
+
+<div class="section"></div>
+<h3>Discover luxury hotels in Nairobi</h3>
+<div class="hotel-list">
+      <img src="images/Tribe.jpg" class="venue-image" width="300" alt=""> <br>
+      <img src="images/kempinski.jpg" class="venue-image" width="300" alt=""> <br>
+      <img src="images/kwetu.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-item"></div>
+    </div>
 </body>
 </html>
