--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
   </div>
   <h2>Already have an account?</h2>
   <form>
-    <input type="text" placeholder="Email/Username" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="text" placeholder="Email" style="width: 350px; height: 20px; font-size: 14px;" required />
     <input type="password" placeholder="Password" style="width: 350px; height: 20px; font-size: 14px;" required />
     <button type="submit" class="login-btn" style="width: 380px; height: 40px; font-size: 14px;" >Log in</button>
   </form>
