editing the 'username' item in sign up to say full name

--- a/signup.html
+++ b/signup.html
@@ -97,7 +97,7 @@
   <h2>Don't have an account yet?</h2>
   <form id="signupForm">
     <input type="email" id="email" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
-    <input type="email" id="username" placeholder="username" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="username" id="fullname" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
     <div class="password-wrapper">
   <input type="password" id="password" placeholder="Password" style="width: 332px; height: 20px; font-size: 14px;" required />
   <span class="toggle-password" onclick="togglePassword()" title="Show Password">👁️</span>
