--- a/hotels.html
+++ b/hotels.html
@@ -51,6 +51,26 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+
+  
+  .image-text-container {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+    margin-bottom: 20px; 
+  }
+
+  
+  .star-rating {
+    font-size: 20px; 
+    color: gold; 
+    margin-top: 8px; 
+  }
+
+ 
+  .hotel-description {
+    max-width: 600px; 
+  }
 </style>
 </head>
 <body>
@@ -68,13 +88,47 @@
   </div>
 </div>
 
-<div class="section"></div>
-<h3>Discover luxury hotels in Nairobi</h3>
-<div class="hotel-list">
-      <img src="images/Tribe.jpg" class="venue-image" width="300" alt=""> <br>
-      <img src="images/kempinski.jpg" class="venue-image" width="300" alt=""> <br>
-      <img src="images/kwetu.jpg" class="venue-image" width="300" alt="">
-      <div class="hotel-item"></div>
+<div class="content">
+  <br><br>
+  <div class="section"></div>
+  <h3>Discover luxury hotels in Nairobi</h3>
+  
+  
+  <div class="hotel-list">
+    <div class="image-text-container">
+      <img src="images/Tribe.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>The Tribe Hotel</h4>
+        <div class="star-rating">★★★★☆</div>
+        <p>A luxurious hotel offering modern amenities in the heart of Nairobi.</p>
+      </div>
     </div>
+    <div class="image-text-container">
+      <img src="images/kempinski.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>Kempinski Hotel</h4>
+        <div class="star-rating">★★★★★</div>
+        <p>An elegant hotel with top-notch services and stunning views.</p>
+      </div>
+    </div>
+    <div class="image-text-container">
+      <img src="images/kwetu.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>Kwetu Hotel</h4>
+        <div class="star-rating">★★★☆☆</div>
+        <div class="hotel-description">
+        <p>Located in: Village Market.
+            <br><br>
+            Address: Limuru Road, Nairobi
+            <br><br>
+            Phone number: 020 7200000
+            </div>
+        </p>
+      </div>
+    </div>
+  </div>
+
+</div>
+
 </body>
 </html>
