completing adding information about hotels

--- a/hotels.html
+++ b/hotels.html
@@ -100,15 +100,26 @@
       <div class="hotel-description">
         <h4>The Tribe Hotel</h4>
         <div class="star-rating">★★★★☆</div>
-        <p>A luxurious hotel offering modern amenities in the heart of Nairobi.</p>
+        <div class="hotel-description">
+        <p>Located in: Village Market.
+            <br><br>
+            Address: Limuru Road, Nairobi
+            <br><br>
+            Phone number: 020 7200000</p>
+      </div>
       </div>
     </div>
     <div class="image-text-container">
       <img src="images/kempinski.jpg" class="venue-image" width="300" alt="">
       <div class="hotel-description">
-        <h4>Kempinski Hotel</h4>
+        <h4>Villa Rosa Kempinski Hotel</h4>
         <div class="star-rating">★★★★★</div>
-        <p>An elegant hotel with top-notch services and stunning views.</p>
+        <div class="hotel-description"></div>
+        <p>
+            Address: Chiromo Road, Nairobi
+            <br><br>
+            Phone number: 0703 049000</p>
+      </div>
       </div>
     </div>
     <div class="image-text-container">
@@ -117,11 +128,10 @@
         <h4>Kwetu Hotel</h4>
         <div class="star-rating">★★★☆☆</div>
         <div class="hotel-description">
-        <p>Located in: Village Market.
+        <p>
+            Address: Peponi Road, Nairobi
             <br><br>
-            Address: Limuru Road, Nairobi
-            <br><br>
-            Phone number: 020 7200000
+            Phone number: 0709 588000
             </div>
         </p>
       </div>
