--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
     gap: 10px;
     padding: 10px 0;
     width: 100%;
-    scrollbar-width: none; /* Firefox */
+    scrollbar-width: none;
   }
   
   .venue-list::-webkit-scrollbar {
@@ -210,13 +210,27 @@
       <button class="arrow-left" onclick="scrollCarousel(-1)">&#8592;</button>
       <div class="venue-list" id="popularCarousel">
         
+        <a href="restaurants.html">
         <img src="images/carnivore restaurant.jpg" class="venue-image" alt="">
+        </a>
+        <a href="restaurants.html">
         <img src="images/NSK.jpg" class="venue-image" alt="">
+        </a>
+        <a href="restaurants.html">
         <img src="images/harvest.jpg" class="venue-image" alt="">
+        </a>
+        <a href="hotels.html">
         <img src="images/Tribe.jpg" class="venue-image" alt="">
+        </a>
+        <a href="hotels.html">
         <img src="images/kempinski.jpg" class="venue-image" alt="">
+        </a>
+        <a href="hotels.html">
         <img src="images/kwetu.jpg" class="venue-image" alt="">
+        </a>
+        <a href="hotels.html">
         <img src="images/radisson blu.jpg" class="venue-image" alt="">
+        </a>
       </div>
       <button class="arrow-right" onclick="scrollCarousel(1)">&#8594;</button>
     </div>
