--- a/hotels.html
+++ b/hotels.html
@@ -136,6 +136,21 @@
         </p>
       </div>
     </div>
+
+    <div class="image-text-container">
+      <img src="images/radisson blu.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>Radisson Blu Hotel</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="hotel-description">
+        <p>
+            Address: Elgon Road, Nairobi
+            <br><br>
+            Phone number: 0709 810000
+            </div>
+        </p>
+      </div>
+    </div>
   </div>
 
 </div>
