--- a/restaurants.html
+++ b/restaurants.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Home Page</title>
+<title>Restaurants</title>
+<link rel="stylesheet" href="css/structure.css">
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -65,6 +66,25 @@
     <a href="signup.html">Sign up</a>
     <a href="login.html">Log in</a>
   </div>
+</div>
+<br><br>
+<div class="content">
+    <h3>Taste restaurants in Nairobi</h3>
+    
+<div class="image-text-container">
+      <img src="images/carnivore restaurant.jpg" class="venue-image" width="300" alt="">
+      <div class="restaurant-description">
+        <h4>The Carnivore Restaurant</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="restaurant-description">
+        <p>
+            Address: Langata Road, Nairobi
+            <br><br>
+            Phone number: 0722 204647
+            </div>
+        </p>
+      </div>
+    </div>
 </div>
 </body>
 </html>
