--- a/restaurants.html
+++ b/restaurants.html
@@ -51,6 +51,24 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+  .image-text-container {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+    margin-bottom: 20px; 
+  }
+
+  
+  .star-rating {
+    font-size: 20px; 
+    color: gold; 
+    margin-top: 8px; 
+  }
+
+ 
+  .hotel-description {
+    max-width: 600px; 
+  }
 </style>
 </head>
 <body>
