--- a/restaurants.html
+++ b/restaurants.html
@@ -99,10 +99,47 @@
             Address: Langata Road, Nairobi
             <br><br>
             Phone number: 0722 204647
+            <br><br>
+            Want to book a table? <a href="booking.html">Click here</a>
+        </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="image-text-container">
+      <img src="images/harvest.jpg" class="venue-image" width="300" alt="">
+      <div class="restaurant-description">
+        <h4>Harvest Restaurant</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="restaurant-description">
+        <p>
+            Located in: Village Market.
+            <br><br>
+            Address: Limuru Road, Nairobi
+            <br><br>
+            Phone number: 0732 186215
+            <br><br>
+            Want to book a table? <a href="booking.html">Click here</a>
             </div>
         </p>
       </div>
     </div>
+    <div class="image-text-container">
+      <img src="images/NSK.jpg" class="venue-image" width="300" alt="">
+      <div class="restaurant-description">
+        <h4>Nairobi Street Kitchen</h4>
+        <div class="star-rating">★★★★☆</div>
+        <div class="restaurant-description">
+        <p>
+            Address: Mpaka Road, Nairobi
+            <br><br>
+            Phone number: 0707 800800
+            <br><br>
+            Want to book a table? <a href="booking.html">Click here</a>
+        </p>
+        </div>
+        </div>
+      </div>
 </div>
 </body>
 </html>
