addition of the booking.html page to the restaurants page

--- a/hotels.html
+++ b/hotels.html
@@ -105,7 +105,10 @@
             <br><br>
             Address: Limuru Road, Nairobi
             <br><br>
-            Phone number: 020 7200000</p>
+            Phone number: 020 7200000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
+        </p>
       </div>
       </div>
     </div>
@@ -118,7 +121,10 @@
         <p>
             Address: Chiromo Road, Nairobi
             <br><br>
-            Phone number: 0703 049000</p>
+            Phone number: 0703 049000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
+        </p>
       </div>
       </div>
     </div>
@@ -132,6 +138,8 @@
             Address: Peponi Road, Nairobi
             <br><br>
             Phone number: 0709 588000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
             </div>
         </p>
       </div>
@@ -147,6 +155,8 @@
             Address: Elgon Road, Nairobi
             <br><br>
             Phone number: 0709 810000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
             </div>
         </p>
       </div>
