--- a/things_to_do.html
+++ b/things_to_do.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Things to do</title>
+<title>Restaurants</title>
+<link rel="stylesheet" href="css/structure.css">
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -50,6 +51,24 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+  .image-text-container {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+    margin-bottom: 20px; 
+  }
+
+  
+  .star-rating {
+    font-size: 20px; 
+    color: gold; 
+    margin-top: 8px; 
+  }
+
+ 
+  .hotel-description {
+    max-width: 600px; 
+  }
 </style>
 </head>
 <body>
@@ -65,6 +84,67 @@
     <a href="signup.html">Sign up</a>
     <a href="login.html">Log in</a>
   </div>
+</div>
+<br><br>
+<div class="content">
+    <h3>Explore exciting activities in Nairobi</h3>
+    
+<div class="image-text-container">
+      <img src="images/escape room.jpg" class="venue-image" width="300" alt="">
+      <div class="activity-description">
+        <h4>Escape Room Kenya</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="activity-description">
+        <p>
+            Located in: Karen Village.
+            <br><br>
+            Address: Ngong Road, Nairobi
+            <br><br>
+            Phone number: 0796 110706
+            <br><br>
+            Want to book this place for an event? <a href="booking.html">Click here</a>
+        </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="image-text-container">
+      <img src="images/strikez bowling.jpg" class="venue-image" width="300" alt="">
+      <div class="activity-description">
+        <h4>Strikez Bowling Westgate</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="activity-description">
+        <p>
+            Located in: Westgate Mall.
+            <br><br>
+            Address: Mwanzi Road, Nairobi
+            <br><br>
+            Phone number: 0716 274798
+            <br><br>
+            Want to book this place for an event? <a href="booking.html">Click here</a>
+        </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="image-text-container">
+      <img src="images/museum of illusions.jpg" class="venue-image" width="300" alt="">
+      <div class="activity-description">
+        <h4>Museum of illusions</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="activity-description">
+        <p>
+            Located in: Laxcon Court and Plaza, Ground Floor 
+            <br><br>
+            Address: Swaminarayan Road, Nairobi
+            <br><br>
+            Phone number: 0719 413961
+            <br><br>
+            Want to book this place for an event? <a href="booking.html">Click here</a>
+        </p>
+        </div>
+      </div>
+    </div>
 </div>
 </body>
 </html>
