changing gardens to outdoors on the home page

--- a/home.html
+++ b/home.html
@@ -192,7 +192,7 @@
   <button onclick="location.href='hotels.html'">Hotels</button>
   <button onclick="location.href='things_to_do.html'">Things to do</button>
   <button onclick="location.href='bnbs.html'">BnBs</button>
-  <button onclick="location.href='gardens.html'">Gardens</button>
+  <button onclick="location.href='gardens.html'">Outdoors</button>
 </div>
 
 
