adding content to the outdoors page

--- a/outdoors.html
+++ b/outdoors.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Restaurants</title>
+<title>Outdoors</title>
 <link rel="stylesheet" href="css/structure.css">
 <style>
   body {
@@ -87,78 +87,64 @@
 </div>
 <br><br>
 <div class="content">
-    <h3>Taste restaurants in Nairobi</h3>
-
-
-    <div class="image-text-container">
-      <img src="images/shamba cafe.JPG" class="venue-image" width="300" alt="">
-      <div class="restaurant-description">
-        <h4>Shamba Cafe</h4>
-        <div class="star-rating">★★★★★</div>
-        <div class="restaurant-description">
-        <p>
-            Address: Loresho Ridge, Nairobi
-            <br><br>
-            Phone number: 0757 701080 
-            <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
-        </p>
-        </div>
-      </div>
-    </div>
-
-
+    <h3>Breathe fresh air at these stunning venues</h3>
+    
 <div class="image-text-container">
-      <img src="images/carnivore restaurant.jpg" class="venue-image" width="300" alt="">
-      <div class="restaurant-description">
-        <h4>The Carnivore Restaurant</h4>
+      <img src="images/paradise lost.jpg" class="venue-image" width="300" alt="">
+      <div class="activity-description">
+        <h4>Paradise Lost</h4>
         <div class="star-rating">★★★★★</div>
-        <div class="restaurant-description">
+        <div class="activity-description">
         <p>
-            Address: Langata Road, Nairobi
+            About: Picnic ground in Kiambu. Boat riding, bird watching, and a waterfall. 
             <br><br>
-            Phone number: 0722 204647
+            Address: Glory Road, Kiambu
             <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
+            Phone number: 0110 022222
+            <br><br>
+            Want to book this place for an event? <a href="booking.html">Click here</a>
         </p>
         </div>
       </div>
     </div>
 
     <div class="image-text-container">
-      <img src="images/harvest.jpg" class="venue-image" width="300" alt="">
-      <div class="restaurant-description">
-        <h4>Harvest Restaurant</h4>
+      <img src="images/karura forest.jpg" class="venue-image" width="300" alt="">
+      <div class="activity-description">
+        <h4>Karura Forest</h4>
         <div class="star-rating">★★★★★</div>
-        <div class="restaurant-description">
+        <div class="activity-description">
         <p>
-            Located in: Village Market.
+            About: Urban forest in Nairobi. Walking, jogging, and cycling trails.
             <br><br>
             Address: Limuru Road, Nairobi
             <br><br>
-            Phone number: 0732 186215
-            <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
-            </div>
+            Want to book this place for an event? <a href="booking.html">Click here</a>
         </p>
+        </div>
       </div>
     </div>
+
     <div class="image-text-container">
-      <img src="images/NSK.jpg" class="venue-image" width="300" alt="">
-      <div class="restaurant-description">
-        <h4>Nairobi Street Kitchen</h4>
-        <div class="star-rating">★★★★☆</div>
-        <div class="restaurant-description">
+      <img src="images/jump  by flying fox.jpg" class="venue-image" width="300" alt="">
+      <div class="activity-description">
+        <h4>Jump by Flying Fox</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="activity-description">
         <p>
-            Address: Mpaka Road, Nairobi
+            About: Adventure park in Nairobi. Ziplining, bungee jumping, and obstacle courses.       
             <br><br>
-            Phone number: 0707 800800
+            Located in: The Hub, Karen 
             <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
+            Address: 09 Langata Rd, Nairobi
+            <br><br>
+            Phone number: 0715 969696
+            <br><br>
+            Want to book this place for an event? <a href="booking.html">Click here</a>
         </p>
         </div>
-        </div>
       </div>
+    </div>
 </div>
 </body>
 </html>
