--- a/bnbs.html
+++ b/bnbs.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>BnBs</title>
+<title>Hotels</title>
+<link rel="stylesheet" href="css/structure.css">
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -50,6 +51,26 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+
+  
+  .image-text-container {
+    display: flex;
+    align-items: center;
+    gap: 20px; 
+    margin-bottom: 20px; 
+  }
+
+  
+  .star-rating {
+    font-size: 20px; 
+    color: gold; 
+    margin-top: 8px; 
+  }
+
+ 
+  .hotel-description {
+    max-width: 600px; 
+  }
 </style>
 </head>
 <body>
@@ -66,5 +87,83 @@
     <a href="login.html">Log in</a>
   </div>
 </div>
+
+<div class="content">
+  <br><br>
+  <div class="section"></div>
+  <h3>Discover luxury hotels in Nairobi</h3>
+  
+  
+  <div class="hotel-list">
+    <div class="image-text-container">
+      <img src="images/Tribe.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>The Tribe Hotel</h4>
+        <div class="star-rating">★★★★☆</div>
+        <div class="hotel-description">
+        <p>Located in: Village Market.
+            <br><br>
+            Address: Limuru Road, Nairobi
+            <br><br>
+            Phone number: 020 7200000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
+        </p>
+      </div>
+      </div>
+    </div>
+    <div class="image-text-container">
+      <img src="images/kempinski.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>Villa Rosa Kempinski Hotel</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="hotel-description"></div>
+        <p>
+            Address: Chiromo Road, Nairobi
+            <br><br>
+            Phone number: 0703 049000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
+        </p>
+      </div>
+      </div>
+    </div>
+    <div class="image-text-container">
+      <img src="images/kwetu.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>Kwetu Hotel</h4>
+        <div class="star-rating">★★★☆☆</div>
+        <div class="hotel-description">
+        <p>
+            Address: Peponi Road, Nairobi
+            <br><br>
+            Phone number: 0709 588000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
+            </div>
+        </p>
+      </div>
+    </div>
+
+    <div class="image-text-container">
+      <img src="images/radisson blu.jpg" class="venue-image" width="300" alt="">
+      <div class="hotel-description">
+        <h4>Radisson Blu Hotel</h4>
+        <div class="star-rating">★★★★★</div>
+        <div class="hotel-description">
+        <p>
+            Address: Elgon Road, Nairobi
+            <br><br>
+            Phone number: 0709 810000
+            <br><br>
+            Have an event? <a href="booking.html">Click here to book</a>
+            </div>
+        </p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 </body>
 </html>
