--- a/review.html
+++ b/review.html
@@ -51,14 +51,14 @@
     border-radius: 4px;
   }
 
-  /* Styles for star rating */
+ 
   .star {
     font-size: 2em;
     cursor: pointer;
-    color: #ccc; /* default color for unselected stars */
+    color: #ccc; 
   }
   .star.selected {
-    color: #ffd700; /* gold color for selected stars */
+    color: #ffd700; 
   }
 </style>
 </head>
@@ -104,7 +104,7 @@
 </div>
 </form>
 
-<!-- JavaScript for star rating -->
+
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     const stars = document.querySelectorAll('.star');
