--- a/signup.html
+++ b/signup.html
@@ -97,7 +97,13 @@
   <h2>Don't have an account yet?</h2>
   <form id="signupForm">
     <input type="email" id="email" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
-    <input type="username" id="fullname" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="fullname" id="fullname" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <select id="location" style="width: 375px; height: 35px; font-size: 14px;" required >
+      <option value="">--Select Location--</option>
+      <option value="client">Nairobi</option> 
+      <option value="owner">Naivasha</option>
+      <option value="owner">Nakuru</option>
+    </select>
     <div class="password-wrapper">
   <input type="password" id="password" placeholder="Password" style="width: 332px; height: 20px; font-size: 14px;" required />
   <span class="toggle-password" onclick="togglePassword()" title="Show Password">👁️</span>
