editing the sign up and log in page buttons

--- a/review.html
+++ b/review.html
@@ -44,12 +44,19 @@
     margin-left: 20px;
   }
   .auth-links a {
-    text-decoration: none;
-    color: #333;
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+      padding: 8px 20px;
+      text-decoration: none;
+      color: white;
+      background-color: #007bff; /* Blue */
+      border-radius: 50px; /* Fully rounded */
+      border: none;
+      display: inline-block;
+      transition: background-color 0.3s;
+    }
+
+    .auth-links a:hover {
+      background-color: #0056b3; /* Darker blue on hover */
+    }
 .container {
     width: 400px;
     margin: 50px auto;
